--- a/cfg/chat.css
+++ b/cfg/chat.css
@@ -1,21 +1,21 @@
-﻿@media print {
- 	@page {margin-top:14px;
-	       margin-left: 50px;
-	       margin-right: 50px;
-	       margin-bottom: 75px;}
+@media print {
+    @page {margin-top:14px;
+           margin-left: 50px;
+           margin-right: 50px;
+           margin-bottom: 75px;}
 
 }
 
 header, footer, nav, aside {
- 	display: none;
+    display: none;
 }
 
 li, img, table {
-	page-break-inside: avoid;
+    page-break-inside: avoid;
 }
 
 
-﻿body { padding-top:30px; }
+body { padding-top:30px; }
 .widget .panel-body { padding:0px; }
 .widget .list-group { margin-bottom: 0; }
 .widget .panel-title { display:inline }
@@ -53,145 +53,145 @@ li, img, table {
 ul { list-style-type:none; padding:0px; margin:0px; }
 ul li { padding-left: 0px; }
 
-chat bubble empty css  
+chat bubble empty css
 
 .bubble_empty{
 
-	 
+
 }
 
 
 .bubble_empty{
-	background-color: transparent;
-	display: inline-block;
-	width: 95%;	
-	}
+    background-color: transparent;
+    display: inline-block;
+    width: 95%;
+    }
 
-chat bubble css  
+chat bubble css
 
 .bubble{
-	background-color: #F2F2F2;
-	border-radius: 5px;
-	box-shadow: 0 0 6px #B2B2B2;
-	display: inline-block;
-	padding: 10px 18px;
-	position: relative;
-	vertical-align: top;
-	float: left;   
-	margin: 5px 45px 5px 20px; 
-	border-color: #cdecb0;	 
+    background-color: #F2F2F2;
+    border-radius: 5px;
+    box-shadow: 0 0 6px #B2B2B2;
+    display: inline-block;
+    padding: 10px 18px;
+    position: relative;
+    vertical-align: top;
+    float: left;
+    margin: 5px 45px 5px 20px;
+    border-color: #cdecb0;
 }
 
 .bubble::before {
-	background-color: #F2F2F2;
-	content: "\00a0";
-	display: inline-block;
-	height: 16px;
-	position: absolute;
-	top: 11px;
-	transform:         rotate( 29deg ) skew( -35deg );
-	-moz-transform:    rotate( 29deg ) skew( -35deg );
-	-ms-transform:     rotate( 29deg ) skew( -35deg );
-	-o-transform:      rotate( 29deg ) skew( -35deg );
-	-webkit-transform: rotate( 29deg ) skew( -35deg );
-	width:  20px;
-	box-shadow: -2px 2px 2px 0 rgba( 178, 178, 178, .4 );
-	left: -9px; 
-	}
+    background-color: #F2F2F2;
+    content: "\00a0";
+    display: inline-block;
+    height: 16px;
+    position: absolute;
+    top: 11px;
+    transform:         rotate( 29deg ) skew( -35deg );
+    -moz-transform:    rotate( 29deg ) skew( -35deg );
+    -ms-transform:     rotate( 29deg ) skew( -35deg );
+    -o-transform:      rotate( 29deg ) skew( -35deg );
+    -webkit-transform: rotate( 29deg ) skew( -35deg );
+    width:  20px;
+    box-shadow: -2px 2px 2px 0 rgba( 178, 178, 178, .4 );
+    left: -9px;
+    }
 
 .bubble{
-	float: left;
-	background-color: #F2F2F2;
-	border-radius: 5px;
-	box-shadow: 0 0 6px #B2B2B2;
-	display: inline-block;
-	padding: 10px 18px;
-	position: relative;
-	vertical-align: top;
-	margin: 10px 10px;
-	border-color: #cdecb0;
-	width: 47%;
-	}
+    float: left;
+    background-color: #F2F2F2;
+    border-radius: 5px;
+    box-shadow: 0 0 6px #B2B2B2;
+    display: inline-block;
+    padding: 10px 18px;
+    position: relative;
+    vertical-align: top;
+    margin: 10px 10px;
+    border-color: #cdecb0;
+    width: 47%;
+    }
 
 
- chat bubble css  
+ chat bubble css
 
 
 bubble2{
-	background-color: #dfeecf;
-	border-radius: 5px;
-	box-shadow: 0 0 6px #B2B2B2;
-	display: inline-block;
-	padding: 10px 18px;
-	position: relative;
-	vertical-align: top;
-	float: left;   
-	margin: 5px 45px 5px 20px; 
-	border-color: #cdecb0;
-	}
+    background-color: #dfeecf;
+    border-radius: 5px;
+    box-shadow: 0 0 6px #B2B2B2;
+    display: inline-block;
+    padding: 10px 18px;
+    position: relative;
+    vertical-align: top;
+    float: left;
+    margin: 5px 45px 5px 20px;
+    border-color: #cdecb0;
+    }
 
 .bubble2::before {
-	float:right;
-	background-color: #dfeecf;
-	content: "\00a0";
-	display: inline-block;
-	height: 19px;
-	position: relative;
-	left: 26px;
-	top: 11px;
-	transform:         rotate( 205deg ) skew( -35deg );
-	-moz-transform:    rotate( 205deg ) skew( -35deg );
-	-ms-transform:     rotate( 205deg ) skew( -35deg );
-	-o-transform:      rotate( 205deg ) skew( -35deg );
-	-webkit-transform: rotate( 205deg ) skew( -35deg );
-	width:  20px;
-	box-shadow: -2px 2px 2px 0 rgba( 178, 178, 178, .4 );
-	}
+    float:right;
+    background-color: #dfeecf;
+    content: "\00a0";
+    display: inline-block;
+    height: 19px;
+    position: relative;
+    left: 26px;
+    top: 11px;
+    transform:         rotate( 205deg ) skew( -35deg );
+    -moz-transform:    rotate( 205deg ) skew( -35deg );
+    -ms-transform:     rotate( 205deg ) skew( -35deg );
+    -o-transform:      rotate( 205deg ) skew( -35deg );
+    -webkit-transform: rotate( 205deg ) skew( -35deg );
+    width:  20px;
+    box-shadow: -2px 2px 2px 0 rgba( 178, 178, 178, .4 );
+    }
 
 .bubble2{
-	list-style:none;
-	float:right;
-	background-color: #dfeecf;
-	border-radius: 5px;
-	box-shadow: 0 0 6px #B2B2B2;
-	display: inline-block;
-	padding: 10px 18px;
-	position: relative;
-	vertical-align: top;
-	margin: 10px 10px;
-	border-color: #cdecb0;
-	width: 47%;
-	}
+    list-style:none;
+    float:right;
+    background-color: #dfeecf;
+    border-radius: 5px;
+    box-shadow: 0 0 6px #B2B2B2;
+    display: inline-block;
+    padding: 10px 18px;
+    position: relative;
+    vertical-align: top;
+    margin: 10px 10px;
+    border-color: #cdecb0;
+    width: 47%;
+    }
 
 
 
- chat bubble-system css  
+ chat bubble-system css
 
 .bubble-system{
-	background-color: #cdcdcd;
-	border-radius: 5px;
-	box-shadow: 0 0 6px #B2B2B2;
-	display: inline-block;
-	padding: 10px 18px;
-	vertical-align: top;
-	float: left;   
-	margin: 5px 45px 5px 20px; 
-	border-color: #cdecb0;
+    background-color: #cdcdcd;
+    border-radius: 5px;
+    box-shadow: 0 0 6px #B2B2B2;
+    display: inline-block;
+    padding: 10px 18px;
+    vertical-align: top;
+    float: left;
+    margin: 5px 45px 5px 20px;
+    border-color: #cdecb0;
 }
 
 .bubble-system::before {
 
-	}
+    }
 
 .bubble-system{
-	background-color: #cdcdcd;
-	border-radius: 5px;
-	box-shadow: 0 0 6px #B2B2B2;
-	display: inline-block;
-	padding: 10px 18px;
-	vertical-align: top;
-	margin: 5px 25% 15px 25%; 
-	border-color: #cdecb0;
-	position: relative;
-	text-align: center;
+    background-color: #cdcdcd;
+    border-radius: 5px;
+    box-shadow: 0 0 6px #B2B2B2;
+    display: inline-block;
+    padding: 10px 18px;
+    vertical-align: top;
+    margin: 5px 25% 15px 25%;
+    border-color: #cdecb0;
+    position: relative;
+    text-align: center;
 
