New whapa-gui.py v1.19 and whapa.py v1.5.
* Central definition of versions in 'whautils.py'.
* Option added to turn the HTML 'alt' tag for images on or off.
* Improved generation of links from URLs in messages.
* Unified HTML report templates for English and Spanish.
* Several improvements and fixes in the generation of the reports.

--- a/cfg/chat.css
+++ b/cfg/chat.css
@@ -16,7 +16,7 @@ li, img, table {
 }
 
 
-body { padding-top:30px; }
+body { padding-top:0px; }
 .widget .panel-body { padding:0px; }
 .widget .list-group { margin-bottom:0; }
 .widget .panel-title { display:inline; }
@@ -27,7 +27,7 @@ body { padding-top:30px; }
 .widget .action { margin-top:5px; }
 .widget .comment-text { font-size:12px; }
 .widget .btn-block { border-top-left-radius:0px; border-top-right-radius:0px; }
-.header { padding:10px; }
+.header { padding-left:10px; padding-right:10px; }
 .col-xs-2 .col-md-1 img { padding-right:20px; color:#FFFFFF; }
 .row img { float:left; padding-right:4px; padding-left:4px; }
 
